# golem

./: .gitmodules  CMakeLists.txt
cmake/: DirectoryCopy.cmake
lib/golem/: CMakeLists.txt
lib/golem/include/golem/audio/: ApuEmulator.h  AudioOutput.h
lib/golem/include/golem/audio/apu_emulator/: AudioRegisters.h  ChannelOneEmulator.h  ChannelTwoEmulator.h
lib/golem/include/golem/core/: IAudioOutputDevice.h  IAudioProcessingUnit.h  IPlayingProgressionTracker.h  ISongLoader.h  ISongSaver.h  ITcpSocket.h  NotePlayer.h  PatternPlayer.h  SongPlayer.h
lib/golem/include/golem/domain/: Channel.h  IExportService.h  IProjectRepository.h  Note.h  Pattern.h  PhraseView.h  PlaybackInfo.h  Project.h  Register.h  Song.h  Track.h
lib/golem/include/golem/domain/events/: DomainEvent.h  InstrumentsChanged.h  PlaybackInfoChanged.h  ProjectDomainEventProcessor.h
lib/golem/include/golem/domain/instruments/: Adsr.h  Instrument.h  PulseInstrument.h  WaveInstrument.h
lib/golem/include/golem/infrastructure/: InMemoryProjectRepository.h
lib/golem/include/golem/infrastructure/exporter/: CProjectExporter.h
lib/golem/include/golem/interfaces/gui/: MainWindow.h
lib/golem/include/golem/use_cases/: AddInstrument.h  AddNote.h  AddSong.h  ChangeNotesPerPhrase.h  ChangeTicksPerNote.h  CopyNotes.h  CreateNewProject.h  ExportProject.h  GetInstruments.h  GetMinMaxTrackFrequencies.h  GetNotesPerPhrase.h  GetPattern.h  GetPatterns.h  GetPhraseView.h  GetPlaybackInfo.h  GetSong.h  GetSongs.h  GetTicksPerNote.h  GetTrack.h  PlayNote.h  PlayPattern.h  PlaySong.h  ProjectUseCases.h  SetInstrumentName.h  SetInstrumentPulse.h  SetSongName.h  SetTicksPerNote.h  SetTrackPattern.h  StopNote.h  StopPattern.h  StopSong.h
lib/golem/include/golem/utils/: observable.h  scope_guard.h  shared_reference.h
lib/golem/src/audio/: ApuEmulator.cpp  AudioOutput.cpp
lib/golem/src/audio/apu_emulator/: AudioRegisters.cpp  ChannelOneEmulator.cpp  ChannelThreeEmulator.cpp  ChannelTwoEmulator.cpp
lib/golem/src/core/: Common.cpp  Common.h  NotePlayer.cpp  PatternPlayer.cpp  SongPlayer.cpp
lib/golem/src/core/song_loader/: JsonSongLoader.cpp  JsonSongLoader.h
lib/golem/src/core/song_saver/: JsonSongSaver.cpp  JsonSongSaver.h
lib/golem/src/domain/: Note.cpp  Pattern.cpp  PhraseView.cpp  Project.cpp  Song.cpp  Track.cpp
lib/golem/src/domain/instruments/: Adsr.cpp  Instrument.cpp  PulseInstrument.cpp  WaveInstrument.cpp
lib/golem/src/infrastructure/: InMemoryProjectRepository.cpp
lib/golem/src/infrastructure/exporter/: CProjectExporter.cpp
lib/golem/src/interfaces/: ConfigurationView.cpp  ConfigurationView.h  GuiState.cpp  GuiState.h  ImGuiTools.cpp  ImGuiTools.h  MainView.cpp  MainView.h  MainWindow.cpp  MenuBar.cpp  MenuBar.h  PatternView.cpp  PatternView.h  PianoRollView.cpp  PianoRollView.h  SequencerHeaderView.cpp  SequencerHeaderView.h  SequencerView.cpp  SequencerView.h  SongView.cpp  SongView.h  ToolBar.cpp  ToolBar.h  TrackView.cpp  TrackView.h
lib/golem/src/interfaces/ecs/: Component.h  EntityManager.cpp  EntityManager.h  EntityMemoryPool.cpp  EntityMemoryPool.h  System.cpp  System.h  SystemFactory.cpp
lib/golem/src/interfaces/ecs/components/: AnchorComponent.h  BorderComponent.h  DrawComponent.h  FillComponent.h  KeyboardInputComponent.h  MouseAreaComponent.h  PositionComponent.h  SizeComponent.h  SpriteComponent.h  TextureComponent.h  UpdateComponent.h
lib/golem/src/interfaces/ecs/systems/: AnchoringSystem.cpp  AnchoringSystem.h  RendererSystem.cpp  RendererSystem.h  UpdaterSystem.cpp  UpdaterSystem.h  UserInputSystem.cpp  UserInputSystem.h
lib/golem/src/interfaces/graphics/: FontManager.cpp  FontManager.h  GraphicsFactory.cpp  GraphicsFactory.h  ImageFactory.cpp  ImageFactory.h  ImageManager.cpp  ImageManager.h  LabelFactory.cpp  LabelFactory.h  Painter.cpp  Painter.h  Texture.h  TextureManager.cpp  TextureManager.h  Widget.cpp  Widget.h
lib/golem/src/interfaces/graphics/core/: Color.cpp  Rectangle.h
lib/golem/src/interfaces/gui/: MainWindow.cpp  MenuBar.cpp  MenuBar.h  ModalDialog.h  PlayProgressionTracker.cpp  PlayProgressionTracker.h
lib/golem/src/interfaces/gui/style/: Style.cpp  Style.h
lib/golem/src/use_cases/: AddInstrument.cpp  AddNote.cpp  AddSong.cpp  ChangeNotesPerPhrase.cpp  CreateProject.cpp  ExportProject.cpp  GetInstruments.cpp  GetMinMaxTrackFrequencies.cpp  GetNotesPerPhrase.cpp  GetPattern.cpp  GetPatterns.cpp  GetPhraseView.cpp  GetPlaybackInfo.cpp  GetSong.cpp  GetSongs.cpp  GetTicksPerNote.cpp  GetTrack.cpp  PlayNote.cpp  PlayPattern.cpp  PlaySong.cpp  ProjectUseCases.cpp  SetInstrumentName.cpp  SetInstrumentPulse.cpp  SetSongName.cpp  SetTicksPerNote.cpp  SetTrackPattern.cpp  StopNote.cpp  StopPattern.cpp  StopSong.cpp
lib/golem/src/utils/: scope_guard.cpp
test/unit/: CMakeLists.txt
test/unit/src/mocks/: IProjectRepositoryMock.h
test/unit/src/use_cases/: AddInstrumentTest.cpp  AddNoteTest.cpp  AddSongTest.cpp
(+143 files in other folders)
